Added code for stm32 h7 (CAN is not working for now)

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 VehicleControlUnit/SWV_export
 VehicleControlUnit/Debug
 VehicleControlUnit/Drivers
+VCU-H745ZI-Q/SWV_export
+VCU-H745ZI-Q/Debug
+VCU-H745ZI-Q/Drivers
+VehicleControlUnit(R2D Mode Test)
