Added unit testing framework

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 VehicleControlUnit/SWV_export
 VehicleControlUnit/Debug
 VehicleControlUnit/Drivers
+VehicleControlUnit/UnitTests/build
 VCU-H745ZI-Q/SWV_export
 VCU-H745ZI-Q/Debug
 VCU-H745ZI-Q/Drivers
