Config Value Parser

--- a/VehicleControlUnit/UnitTests/CMakeLists.txt
+++ b/VehicleControlUnit/UnitTests/CMakeLists.txt
@@ -8,9 +8,10 @@ set(CMAKE_CXX_FLAGS "-O1")
 
 file(GLOB SOURCES
     ../UserLib/SensorInterfaceLib/*.cpp
+    ../UserLib/MainLib/ConfigValueParser.cpp
+    ../UserLib/MainLib/json.hpp
     ../UserLib/MCUInterfaceLib/*.cpp
     ../UserLib/DataStoreLib/*.cpp
-    ../UserLib/UtlisLib/*.cpp
     ../UserLib/ReadyToDriveLib/*.cpp
     *.cpp
 )
