--- a/VehicleControlUnit/UnitTests/CMakeLists.txt
+++ b/VehicleControlUnit/UnitTests/CMakeLists.txt
@@ -9,6 +9,7 @@ set(CMAKE_CXX_FLAGS "-O1")
 file(GLOB SOURCES
     ../UserLib/SensorInterfaceLib/*.cpp
     ../UserLib/MainLib/ConfigValueParser.cpp
+    ../UserLib/MainLib/ConfigGroupParser.cpp
     ../UserLib/MainLib/json.hpp
     ../UserLib/MCUInterfaceLib/*.cpp
     ../UserLib/DataStoreLib/*.cpp
